--- a/modelo/Nuevo usuario.ipynb
+++ b/modelo/Nuevo usuario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,50 +96,69 @@
     "\n",
     "    # initializing the empty list of recommended movies\n",
     "    recommended_movies = []\n",
-    "    try:\n",
-    "        # gettin the index of the movie that matches the title\n",
-    "        idx = indices[indices == title].index[0]\n",
+    "    # gettin the index of the movie that matches the title\n",
+    "    idx = indices[indices == title].index[0]\n",
     "\n",
-    "        # creating a Series with the similarity scores in descending order\n",
-    "        score_series = pd.Series(cosine_sim[idx]).sort_values(ascending = False)\n",
+    "    # creating a Series with the similarity scores in descending order\n",
+    "    score_series = pd.Series(cosine_sim[idx]).sort_values(ascending = False)\n",
     "\n",
-    "        # getting the indexes of the 10 most similar movies\n",
-    "        top_10_indexes = list(score_series.iloc[1:11].index)\n",
+    "    # getting the indexes of the 10 most similar movies\n",
+    "    top_10_indexes = list(score_series.iloc[1:11].index)\n",
     "\n",
-    "        # populating the list with the titles of the best 10 matching movies\n",
-    "        for i in top_10_indexes:\n",
-    "            recommended_movies.append(list(df.index)[i])\n",
-    "    except:\n",
-    "        i=0\n",
+    "    # populating the list with the titles of the best 10 matching movies\n",
+    "    for i in top_10_indexes:\n",
+    "        recommended_movies.append(list(df.index)[i])\n",
     "        #print(\"not recomend\")\n",
     "    return recommended_movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 120,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-14-2d31fad44287>, line 31)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-14-2d31fad44287>\"\u001b[1;36m, line \u001b[1;32m31\u001b[0m\n\u001b[1;33m    cnx.commit()\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   user_id movie_id  score\n",
+      "0        2       63      5\n",
+      "1        2       68      5\n"
      ]
     }
    ],
    "source": [
     "#user_id= str(argv)\n",
-    "user_id = 162543\n",
-    "sql_artists = \"SELECT user_id,movie_id,score as rating from preferences where user_id =\"+ user_id\n",
-    "#cursor.execute(sql_artists)\n",
+    "user_id = 2\n",
+    "sql_artists = \"SELECT user_id,movie_id,score from preferences where user_id =\"+ str(2)\n",
+    "#print(cursor.execute(sql_artists))\n",
     "ratings = pd.DataFrame()\n",
     "ratings = ratings.append(pd.read_sql(sql_artists, cnx))\n",
-    "print(df)\n",
-    "\n",
+    "print(ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 0 is out of bounds for axis 0 with size 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-134-d44970f03d77>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbusiness_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m         \u001b[0mlist_rec\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrecommendations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbusiness_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_rec\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_rec\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-77-27a4d48520d0>\u001b[0m in \u001b[0;36mrecommendations\u001b[1;34m(title, cosine_sim)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mrecommended_movies\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;31m# gettin the index of the movie that matches the title\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindices\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m# creating a Series with the similarity scores in descending order\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\lulol\\anaconda3\\envs\\test\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4295\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4296\u001b[0m             \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcast_scalar_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwarn_float\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4297\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mgetitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4298\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4299\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mslice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
+     ]
+    }
+   ],
+   "source": [
     "# load the model from disk\n",
     "import pickle\n",
     "filename = 'filtrado_colaborativo.sav'\n",
@@ -149,21 +168,74 @@
     "unique_movies = movies.movieId.unique().shape[0]\n",
     "unique_users = 1\n",
     "matrix_all = np.zeros((unique_users, unique_movies))\n",
-    "movies['movie_id_simple'] = pd.factorize(movies.moviesId)[0]\n",
+    "movies['movie_id_simple'] = pd.factorize(movies.movieId)[0]\n",
     "\n",
     "sql = \"INSERT INTO `recomendations_movies` (`user_id`, `movie_id`, `recomendation_score`) VALUES (%s, %s, %s)\"\n",
     "\n",
     "for i in range(0,unique_users):\n",
     "    #print(user_id)\n",
     "    for k in ratings.index:\n",
-    "        business_id = current_reviews['movieId'][k]\n",
-    "        #print(business_id)\n",
-    "        list_rec = recommendations(business_id)\n",
+    "        for m in df.index:\n",
+    "            if ratings['movie_id'][k] == df ['movieId'][m]:\n",
+    "                business_id = df['movie_id_simple'][m]\n",
+    "                print(business_id)\n",
+    "                break\n",
+    "        list_rec = recommendations(str(business_id))\n",
+    "        print(list_rec)\n",
     "        if len(list_rec) >0:\n",
-    "            for k in list_rec:\n",
-    "                #cursor.execute(sql, (str(user_id),str(k),5))\n",
-    "        cnx.commit()\n",
+    "            #print(business_id)\n",
+    "            for j in list_rec:\n",
+    "                #print(j)\n",
+    "                cursor.execute(sql, (str(user_id),str(business_id),5))\n",
+    "                cnx.commit()\n",
+    "          \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9999999'"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id =162544\n",
+    "sql_artists = \"SELECT user_id from users where id = \"+ str(user_id)\n",
+    "cursor.execute(sql_artists)\n",
+    "# get all records\n",
+    "records = cursor.fetchall()\n",
+    "records[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[180, 47, 212, 78, 131, 160, 287, 473, 418, 69]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a =recommendations(68)\n",
+    "a"
    ]
   },
   {
